--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 29
     defaultConfig {
         applicationId "cn.nurasoft.Zero.VBNet"
         minSdkVersion 21
-        targetSdkVersion 27
-        versionCode 2
-        versionName "1.1"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        targetSdkVersion 29
+        versionCode 3
+        versionName "1.3"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -22,12 +22,12 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    api 'com.android.support:appcompat-v7:27.1.1'
-    api 'com.github.barteksc:android-pdf-viewer:3.0.0-beta.5'
-    api 'com.android.support:support-v4:27.1.1'
-    api 'com.android.support:support-vector-drawable:27.1.1'
-    testImplementation 'junit:junit:4.12'
+    api 'androidx.appcompat:appcompat:1.1.0'
+    api 'com.github.barteksc:android-pdf-viewer:3.1.0-beta.1'
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    api 'androidx.vectordrawable:vectordrawable:1.1.0'
+    testImplementation 'junit:junit:4.13'
 }
